--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "@types/react-dom": "^18.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^8.0.1",
+    "react-router": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-form": "^8.3.8",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
